k8s/Hosped-quarto/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hosped-quarto-service
  namespace: default
spec:
  selector:
    app: hosped-quarto
  ports:
    - protocol: TCP
      port: 8084
      targetPort: 8084
  type: ClusterIP
